Changed to more robust sticky footer implementation and changed to SVG logos

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -11,7 +11,11 @@
 
 	<!-- TODO: add Open Graph meta tags, and possibly Twitter and Google+ too. -->
 
-	<!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
+    <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
+    <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">-->
+    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
 
     <link rel="shortcut icon" type="image/png" href="/public/images/favicon.png" />
     <link rel="icon" type="image/png" href="/public/images/favicon.png" />
@@ -19,9 +23,6 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/public/images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="/public/images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/public/images/touch-icon-ipad-retina.png">
-
-    <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
