--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -92,7 +92,7 @@
                 <h2>DETAILS</h2>
                 <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
                 <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
-                <p class="last-updated"><span class="label">Last updated</span>&nbsp;{{formatDate(app.data.dateModified)}}</p>
+                <p class="last-updated"><span class="label">First Released</span>&nbsp;{{formatDate(app.data.releaseDate)}}</p>
             </div>
         </div>
     </div>
