--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -1,6 +1,4 @@
 <div id="home-page">
-    <div class="akin-logo">
-        <img src="/public/images/appakin-logo-strong.png">
-    </div>
+    <img class="akin-logo" src="/public/images/appakin-logo-dark.svg">
     <div akin-searchbox-home></div>
 </div>
