--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -6,7 +6,9 @@
 </div>
 <div ng-hide="location.path() === '/'" class="search-header-outer-wrapper">
     <div class="search-header-inner-wrapper">
-        <a href="/" class="akin-logo"><img src="/public/images/appakin-logo-light.png"></a>
+        <a class="akin-logo-link" href="/">
+            <img class="akin-logo" src="/public/images/appakin-logo-light.svg">
+        </a>
         <div akin-searchbox class="searchbox-wrapper"></div>
     </div>
     <div class="rule"></div>
