--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -1,19 +1,21 @@
-<div class="footer-call-to-action-wrapper">
-    <p class="call-to-action"><a href="/raters">Help us and earn!&nbsp;Click for more info.</a></p>
+<div class="call-to-action-link-wrapper">
+    <a class="call-to-action-link never-underline" href="/raters">Help us and earn!&nbsp;Click for more info</a>
 </div>
 <div class="footer-background-wrapper">
     <div class="rule"></div>
     <div class="footer-centering-wrapper">
-        <div class="footer-nav">
+        <div class="footer-menu">
             <ul>
-                <li><a href="/">Home</a>&nbsp;&nbsp;&nbsp;</li>
-                <li><a href="/about">About</a>&nbsp;&nbsp;&nbsp;</li>
-                <li><a href="/terms">Terms</a>&nbsp;&nbsp;&nbsp;</li>
-                <li><a href="/privacy">Privacy & Cookies</a></li>
+                <li><a class="underline-on-hover" href="/">Home</a>&nbsp;&bull;&nbsp;</li>
+                <li><a class="underline-on-hover" href="/about">About</a>&nbsp;&bull;&nbsp;</li>
+                <li><a class="underline-on-hover" href="/terms">Terms</a>&nbsp;&bull;&nbsp;</li>
+                <li><a class="underline-on-hover" href="/privacy">Privacy & Cookies</a></li>
             </ul>
         </div>
-        <div class="footer-copyright">
-            <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.<img class="akin-logo" src="/public/images/appakin-logo-light.png"></p>
+        <div class="copyright-wrapper">
+            <p class="copyright">&copy; 2014 appAkin Ltd. All Rights Reserved.
+                <img class="akin-logo" src="/public/images/appakin-logo-light.svg">
+            </p>
         </div>
     </div>
 </div>
