--- a/src/web.public/public/scripts/appakin/search/akin-searchbox-home.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox-home.html
@@ -3,15 +3,15 @@
         <fieldset class="platform-input">
             <label>
                 <input type="radio" name="platform" value="android" ng-model="search.platform"/>
-                <div><img src="/public/images/android-240.png"></div>
+                <div><img src="/public/images/android.svg"></div>
             </label>
             <label>
                 <input type="radio" name="platform" value="ios" ng-model="search.platform"/>
-                <div><img src="/public/images/app-store-240.png"></div>
+                <div><img src="/public/images/app-store-240.png" nopin="nopin"></div>
             </label>
             <label>
                 <input type="radio" name="platform" value="winphone" ng-model="search.platform"/>
-                <div><img src="/public/images/winphone-240.png" class="last"></div>
+                <div><img src="/public/images/winphone.svg" class="last"></div>
             </label>
         </fieldset>
         <fieldset class="search-input">
