--- a/src/web.public/public/scripts/appakin/structure/akin-header.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-header.html
@@ -1,12 +1,12 @@
 <div ng-show="location.path() === '/'" class="home-header-wrapper">
     <ul class="social-media-links">
-        <li><a href="http://www.facebook.com" class="facebook" target="_blank">[</a></li>
-        <li><a href="http://www.twitter.com" class="twitter" target="_blank">]</a></li>
+        <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
+        <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
     </ul>
 </div>
 <div ng-hide="location.path() === '/'" class="search-header-outer-wrapper">
     <div class="search-header-inner-wrapper">
-        <a class="akin-logo-link" href="/">
+        <a class="akin-logo-link" href="/" tabindex="-1">
             <img class="akin-logo" src="/public/images/appakin-logo-light.svg">
         </a>
         <div akin-searchbox class="searchbox-wrapper"></div>
