ng-src fix and work on search results page

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -29,8 +29,7 @@
     <![endif]-->
 </head>
 <body>
-    <!-- for pinterest -->
-    <img style="opacity: 0;position: absolute;top:0; left:0" src="/public/images/touch-icon-ipad-retina.png" alt="appAkin">
+    <img class="logo-for-pinterest" src="/public/images/touch-icon-ipad-retina.png" alt="appAkin">
 
     <header data-akin-header id="header"></header>
     <main>
