--- a/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
+++ b/src/web.public/public/scripts/appakin/pages/search-results/search-results.html
@@ -1,6 +1,12 @@
 <div id="search-results" class="main-wrapper" ng-cloak>
-    <h1 class="search-type" ng-if="search.searchType == 'category'">Categories&nbsp;&nbsp;<a href="{{url.createSearchUrl(search.results.resultSearchTerm, 'app')}}">Click here for App results</a></h1>
-    <h1 class="search-type" ng-if="search.searchType == 'app'">Apps&nbsp;&nbsp;<a href="{{url.createSearchUrl(search.results.resultSearchTerm, 'category')}}">Click here for Category results</a></h1>
+    <h1 class="search-type" ng-if="search.searchType == 'category'">
+        Categories&nbsp;&nbsp;
+        <a class="control-border never-underline" href="{{url.createSearchUrl(search.results.resultSearchTerm, 'app')}}">App Results</a>
+    </h1>
+    <h1 class="search-type" ng-if="search.searchType == 'app'">
+        Apps&nbsp;&nbsp;
+        <a class="control-border never-underline" href="{{url.createSearchUrl(search.results.resultSearchTerm, 'category')}}">Category Results</a>
+    </h1>
     <p class="error" ng-show="search.results.serverError">
         <span class="icon"></span>There was a problem getting your search result. Please try again, or if the problem persists please try later.
     </p>
@@ -15,15 +21,23 @@
                     <li ng-repeat="category in search.results.items"
                         class="category-search-result">
                         <h4><a href="{{ url.createCategoryUrl(category.platform, category.url) }}">{{category.name}}</a></h4>
-                        <!--<p>-->
-                            <!--{{category.shortDesc}}-->
+                        <!--<p class="description"-->
+                           <!--ng-if="category.highlight && category.highlight.desc.length > 0"-->
+                           <!--ng-bind-html="category.highlight.desc[0]">-->
                         <!--</p>-->
+
+                        <ul class="category-apps" ng-if="category.apps.length > 0">
+                            <li class="category-app"ng-repeat="app in category.apps">
+                                <a href="{{ url.createAppUrl(app.platform, app.url) }}" ><img ng-src="{{app.imageUrl}}" width="40px" height="40px"></a>
+                                <h4><a href="{{ url.createAppUrl(app.platform, app.url) }}" ng-bind-html="app.name | trim: 20"></a></h4>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
                 <ul ng-show="search.results.searchType === 'app'">
                     <li ng-repeat="app in search.results.items track by app.url"
                         class="app-search-result">
-                        <a href="{{ url.createAppUrl(app.platform, app.url) }}" ><img src="{{app.imageUrl}}" width="57px" height="57px"></a>
+                        <a href="{{ url.createAppUrl(app.platform, app.url) }}" ><img ng-src="{{app.imageUrl}}" width="57px" height="57px"></a>
                         <h4><a href="{{ url.createAppUrl(app.platform, app.url) }}" ng-bind-html="app.name | trim: 50 | highlight: search.searchTerm"></a></h4>
                         <p class="tight-lines" ng-bind-html="app.highlight"></p>
                     </li>
