--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -61,7 +61,7 @@
                     <div class="screen-shot-wrapper img-border">
                         <ul rn-carousel rn-carousel-buffered rn-carousel-control>
                             <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
-                                <img ng-src="{{screenShotUrl}}">
+                                <img ng-src="{{screenShotUrl}}" nopin="nopin">
                             </li>
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
                     <div class="screen-shot-wrapper img-border">
                         <ul rn-carousel rn-carousel-buffered rn-carousel-control>
                             <li ng-repeat="screenShotUrl in app.data.ipadScreenShotUrls">
-                                <img ng-src="{{screenShotUrl}}">
+                                <img ng-src="{{screenShotUrl}}" nopin="nopin">
                             </li>
                         </ul>
                     </div>
