--- a/src/web.public/public/scripts/appakin/structure/akin-footer.html
+++ b/src/web.public/public/scripts/appakin/structure/akin-footer.html
@@ -1,5 +1,5 @@
 <div class="call-to-action-link-wrapper">
-    <a class="call-to-action-link never-underline" href="/raters">Help us and earn!&nbsp;Click for more info</a>
+    <a class="call-to-action-link never-underline" href="/raters">Help us and earn!&nbsp;Click for details.</a>
 </div>
 <div class="footer-background-wrapper">
     <div class="rule"></div>
