'Home page improvements

--- a/src/web.public/public/scripts/appakin/search/akin-searchbox-home.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox-home.html
@@ -1,26 +1,12 @@
 <div>
     <form ng-submit="search.submitSearch(1)" class="searchbox">
-        <fieldset class="platform-input">
-            <label>
-                <input type="radio" name="platform" value="android" ng-model="search.platform"/>
-                <div><img src="/public/images/android.svg"></div>
-            </label>
-            <label>
-                <input type="radio" name="platform" value="ios" ng-model="search.platform"/>
-                <div><img src="/public/images/app-store-240.png" nopin="nopin"></div>
-            </label>
-            <label>
-                <input type="radio" name="platform" value="winphone" ng-model="search.platform"/>
-                <div><img src="/public/images/winphone.svg" class="last"></div>
-            </label>
-        </fieldset>
         <fieldset class="search-input">
             <autocomplete ng-model="search.searchTerm"
                           placeholder="search.getPlaceholderText()"
                           click-activation="true"
                           data="search.autoComplete.terms"
                           on-type="search.updateAutoCompleteTerms"
-                          on-select="submitSearch"
+                          on-select="search.submitSearch"
                           is-active="search.autoComplete.active"></autocomplete>
         </fieldset>
     </form>
