changed image paths in html

--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -2,7 +2,7 @@
     <h2>
         We want to be your &lsquo;go to&rsquo; service for app discovery!
     </h2>
-    <img src="/public/images/about-service.svg">
+    <img src="/images/about-service.svg">
     <p>
         We created this service to help you find great apps.
         We all love discovering new apps, but we think it&apos;s harder than it should be
@@ -11,7 +11,7 @@
     <h2>
         This is only the beginning!
     </h2>
-    <img src="/public/images/about-to-come.svg">
+    <img src="/images/about-to-come.svg">
     <p>
         We&apos;ve got big plans for how we can give you a great experience.
         It&apos;s an exciting time for us as soon we&apos;ll see our ideas take off.
@@ -22,7 +22,7 @@
     <h2>
         Other stores are coming!
     </h2>
-    <img src="/public/images/about-stores.svg">
+    <img src="/images/about-stores.svg">
     <p>
         At the moment you can use our site to search for apps in the Apple App Store.
         Soon we&apos;ll also allow you to search for apps in Google Play Store
@@ -31,7 +31,7 @@
     <h2>
         We&apos;d love to hear from you!
     </h2>
-    <img src="/public/images/about-contact.svg">
+    <img src="/images/about-contact.svg">
     <p>
         Don&apos;t be shy&mdash;send us an e-mail, call us, or put pen to paper.
     </p>
