--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -1,16 +1,16 @@
 <div id="home-page">
-    <img class="akin-logo" src="/public/images/appakin-logo-dark.svg">
+    <img class="akin-logo" src="/images/appakin-logo-dark.svg">
     <div class="platform-static">
         <div class="platform-img-wrapper android">
-            <img class="platform-img" src="/public/images/android.svg">
-            <img class="soon-overlay" src="/public/images/soon.svg">
+            <img class="platform-img" src="/images/android.svg">
+            <img class="soon-overlay" src="/images/soon.svg">
         </div>
         <div class="platform-img-wrapper ios">
-            <img class="platform-img" src="/public/images/app-store.svg">
+            <img class="platform-img" src="/images/app-store.svg">
         </div>
         <div class="platform-img-wrapper winphone last">
-            <img class="platform-img" src="/public/images/winphone.svg">
-            <img class="soon-overlay" src="/public/images/soon.svg">
+            <img class="platform-img" src="/images/winphone.svg">
+            <img class="soon-overlay" src="/images/soon.svg">
         </div>
     </div>
     <div akin-searchbox-home></div>
