--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -17,19 +17,19 @@
 
     <!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
 
-    <link rel="shortcut icon" type="image/png" href="/public/images/favicon.png" />
-    <link rel="icon" type="image/png" href="/public/images/favicon.png" />
-    <link rel="apple-touch-icon" href="/public/images/touch-icon-iphone.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/public/images/touch-icon-ipad.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/public/images/touch-icon-iphone-retina.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/public/images/touch-icon-ipad-retina.png">
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/images/touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/touch-icon-ipad-retina.png">
 
     <!--[if lt IE 9]>
     <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
 </head>
 <body>
-    <img class="logo-for-pinterest" src="/public/images/touch-icon-ipad-retina.png" alt="appAkin">
+    <img class="logo-for-pinterest" src="/images/touch-icon-ipad-retina.png" alt="appAkin">
 
     <header data-akin-header id="header"></header>
     <main>
