Actually upgraded angular and also did more work removing public from urls. Build is currently bust.

--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -12,10 +12,9 @@
 	<!-- TODO: add Open Graph meta tags, and possibly Twitter and Google+ too. -->
 
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
-    <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">-->
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 
-    <!-- inject:appakin-styles --><link rel="stylesheet" href="/public/stylesheets/app-styles.css"><!-- endinject -->
+    <!-- inject:appakin-styles --><link rel="stylesheet" href="/stylesheets/app-styles.css"><!-- endinject -->
 
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
@@ -26,7 +25,7 @@
 </head>
 <body>
     <!--[if lte IE 8]>
-    <link rel="stylesheet" href="/public/stylesheets/vendor/ie8-overlay.css">
+    <link rel="stylesheet" href="/stylesheets/vendor/ie8-overlay.css">
     <div id="ie8_overlay_bg"></div>
     <div id="ie8_overlay">
         <img class="akin-logo" src="/images/appakin-logo-light.svg">
@@ -57,6 +56,6 @@
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-touch/angular-touch.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <!-- inject:appakin-scripts --><script src="/public/scripts/app-scripts.js"></script><!-- endinject -->
+    <!-- inject:appakin-scripts --><script src="/scripts/app-scripts.js"></script><!-- endinject -->
 </body>
 </html>
