--- a/src/web.public/public/scripts/appakin/pages/raters/raters.html
+++ b/src/web.public/public/scripts/appakin/pages/raters/raters.html
@@ -1,3 +1,14 @@
 <div id="raters" class="main-wrapper">
-    <h1>Help us and earn!</h1>
+    <h2>
+        Want to help us and earn?
+    </h2>
+    <img src="/images/about-to-come.svg">
+    <p>
+        We&apos;ve got an exciting future planned for this Web site.
+        There's a big idea and we&apos;re going to need people to help us.
+        You&apos;ll be able to earn at the same time as helping others to discover great apps.
+        <br/><br/>
+        We&apos;re working right now on getting this all ready for you!
+        Check back soon and keep an eye out for us.
+    </p>
 </div>
