--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -25,14 +25,17 @@
     <img src="/images/about-stores.svg">
     <p>
         At the moment you can use our site to search for apps in the Apple App Store.
-        Soon we&apos;ll also allow you to search for apps in Google Play Store
-        and Windows Phone Store.
+        Soon we&apos;ll also allow you to search for apps in the Google Play&trade; store
+        and the Windows Store.
+        <!--<br/>-->
+        <!--<span class="trademark">Google Play is a trademark of Google Inc.</span>-->
     </p>
+
     <h2>
         We&apos;d love to hear from you!
     </h2>
     <img src="/images/about-contact.svg">
-    <p>
+    <p class="last">
         Don&apos;t be shy&mdash;send us an e-mail, call us, or put pen to paper.
     </p>
     <div class="contact-details">
@@ -46,5 +49,9 @@
             London<br/>
             United Kingdon<br/>
         </p>
+        <ul class="social-media-links">
+            <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
+            <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
+        </ul>
     </div>
 <div>
