--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -47,7 +47,7 @@
     <header data-akin-header id="header"></header>
     <main>
         <span class="spinner-wrapper" us-spinner="{radius:15, width:6, length: 12}" spinner-key="loading"></span>
-        <div ng-view autoscroll="true"></div>
+        <div ng-view autoscroll="false"></div>
     </main>
     <footer data-akin-footer></footer>
 
