--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -2,14 +2,14 @@
     <img class="akin-logo" src="/images/appakin-logo-dark.svg">
     <div class="platform-static">
         <div class="platform-img-wrapper android">
-            <img class="platform-img" src="/images/android.svg">
+            <img class="platform-img" src="/images/google-play.svg">
             <img class="soon-overlay" src="/images/soon.svg">
         </div>
         <div class="platform-img-wrapper ios">
             <img class="platform-img" src="/images/app-store.svg">
         </div>
         <div class="platform-img-wrapper winphone last">
-            <img class="platform-img" src="/images/winphone.svg">
+            <img class="platform-img" src="/images/windows-phone-store.svg">
             <img class="soon-overlay" src="/images/soon.svg">
         </div>
     </div>
