--- a/src/web.public/public/scripts/appakin/search/akin-searchbox-home.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox-home.html
@@ -6,7 +6,7 @@
                           click-activation="true"
                           data="search.autoComplete.terms"
                           on-type="search.updateAutoCompleteTerms"
-                          on-select="search.submitSearch"
+                          on-select="submitSearch"
                           is-active="search.autoComplete.active"></autocomplete>
         </fieldset>
     </form>
