Better responsiveness on about page

--- a/src/web.public/public/scripts/appakin/search/akin-searchbox.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchbox.html
@@ -11,7 +11,7 @@
         </div>
         <div class="platform-menu btn-group" dropdown is-open="status.isOpen">
             <button type="button" class="btn-menu">
-                {{ddSelectSelected.text}}
+                {{platform.getStoreName('ios')}}
             </button>
         </div>
     </form>
