--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -1,57 +1,69 @@
 <div id="about" class="main-wrapper" ng-cloak>
-    <h2>
-        We want to be your &lsquo;go to&rsquo; service for app discovery!
-    </h2>
-    <img src="/images/about-service.svg">
-    <p>
-        We created this service to help you find great apps.
-        We all love discovering new apps, but we think it&apos;s harder than it should be
-        to find the best ones for you.
-    </p>
-    <h2>
-        This is only the beginning!
-    </h2>
-    <img src="/images/about-to-come.svg">
-    <p>
-        We&apos;ve got big plans for how we can give you a great experience.
-        It&apos;s an exciting time for us as soon we&apos;ll see our ideas take off.
-        As part of this, we need interested people to help us. The great thing is:
-        you&apos;ll earn in the process!
-        Check out <a href="/raters">this page</a> for more information.
-    </p>
-    <h2>
-        Other stores are coming!
-    </h2>
-    <img src="/images/about-stores.svg">
-    <p>
-        At the moment you can use our site to search for apps in the Apple App Store.
-        Soon we&apos;ll also allow you to search for apps in the Google Play&trade; store
-        and the Windows Store.
-        <!--<br/>-->
-        <!--<span class="trademark">Google Play is a trademark of Google Inc.</span>-->
-    </p>
-
-    <h2>
-        We&apos;d love to hear from you!
-    </h2>
-    <img src="/images/about-contact.svg">
-    <p class="last">
-        Don&apos;t be shy&mdash;send us an e-mail, call us, or put pen to paper.
-    </p>
+    <div class="about-sections-wrapper">
+        <div class="about-section">
+            <h2>
+                We want to be your &lsquo;go to&rsquo; service for app discovery!
+            </h2>
+            <img src="/images/about-service.svg">
+            <p>
+                We created this service to help you find great apps.
+                We all love discovering new apps, but we think it&apos;s harder than it should be
+                to find the best ones for you.
+            </p>
+        </div>
+        <div class="about-section">
+            <h2>
+                This is only the beginning!
+            </h2>
+            <img src="/images/about-to-come.svg">
+            <p>
+                We&apos;ve got big plans for how we can give you a great experience.
+                It&apos;s an exciting time for us as soon we&apos;ll see our ideas take off.
+                As part of this, we need interested people to help us.
+                Check out <a href="/raters">this page</a> for more information!
+            </p>
+        </div>
+        <div class="about-section">
+            <h2>
+                Other stores are coming!
+            </h2>
+            <img src="/images/about-stores.svg">
+            <p>
+                At the moment you can use our site to search for apps in the Apple App Store.
+                Soon we&apos;ll also allow you to search for apps in the Google Play&trade; store
+                and the Windows Store.
+                <!--<br/>-->
+                <!--<span class="trademark">Google Play is a trademark of Google Inc.</span>-->
+            </p>
+        </div>
+        <div class="about-section">
+            <h2>
+                We&apos;d love to hear from you!
+            </h2>
+            <img src="/images/about-contact.svg">
+            <p class="last">
+                Don&apos;t be shy&mdash;send us an e-mail, call us, or put pen to paper.
+            </p>
+        </div>
+    </div>
     <div class="contact-details">
-        <p class="e-mail">
-            <a class="e-mail" href="mailto:hello@appakin.com">hello@appakin.com</a>
-        </p>
-        <p class="telephone">+44 (0)7930 614 419</p>
-        <p class="address">
-            appAkin Ltd<br/>
-            Twickenham<br/>
-            London<br/>
-            United Kingdon<br/>
-        </p>
-        <ul class="social-media-links">
-            <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
-            <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
-        </ul>
+        <div class="contact-details-section">
+            <p class="e-mail">
+                <a class="e-mail" href="mailto:hello@appakin.com">hello@appakin.com</a>
+            </p>
+            <p class="telephone">+44 (0)7930 614 419</p>
+            <ul class="social-media-links">
+                <li><a href="http://www.facebook.com" class="facebook never-underline" target="_blank"></a></li>
+                <li><a href="http://www.twitter.com" class="twitter never-underline" target="_blank"></a></li>
+            </ul>
+        </div>
+        <div class="contact-details-section">
+            <p class="address">
+                appAkin Ltd<br/>
+                Twickenham<br/>
+                London<br/>
+                United Kingdon<br/>
+            </p>
+        </div>
     </div>
 <div>
